/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package model;

/**
 *
 * @author User
 */
public class DirectOrder extends Order {
    private Staff saler;

    public Staff getSaler() {
        return saler;
    }

    public void setSaler(Staff saler) {
        this.saler = saler;
    }
    
    
}
