/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package model;

/**
 *
 * @author User
 */
public class ItemStatistics {
    private float itemNumber,itemInStorage;

    public float getItemNumber() {
        return itemNumber;
    }

    public void setItemNumber(float itemNumber) {
        this.itemNumber = itemNumber;
    }

    public float getItemInStorage() {
        return itemInStorage;
    }

    public void setItemInStorage(float itemInStorage) {
        this.itemInStorage = itemInStorage;
    }
    
    
}
